project_need: .ejs syntax for to accept variables [ views ]

--- a/node_exercise/1serveStatic/view/index.ejs
+++ b/node_exercise/1serveStatic/view/index.ejs
@@ -1,12 +1,12 @@
 <!-- <html>
     <body>
         <h1>
-
+            welcome to <%=title%>
         </h1>
     </body>
 </html> -->
 
-
+    <!-- <% %> --this is a dynamic block you put only .js code inside this block -->
 <!-- <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,13 +16,13 @@
 </head>
 <body>
     <h1>
-
+        welcome to <%=title%>
     </h1>
     <ul>
-
-
+        <% data.map((i)=>{
+            %><li><%= i %></li><%
         })
-
+        %>
     </ul>
 </body>
 </html> -->
